namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-prisoner-to-nomis-update-prod/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-prisoner-to-nomis-update-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "dps_dev"
    cloud-platform.justice.gov.uk/slack-alert-channel: "syscon-alerts"
    cloud-platform.justice.gov.uk/application: "HMPPS Prisoner to NOMIS Update"
    cloud-platform.justice.gov.uk/owner: "DPS Syscon Team"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-prisoner-to-nomis-update.git"
    cloud-platform.justice.gov.uk/team-name: "syscon-devs"
